<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/hijau"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:src="@drawable/buku" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton1"
            android:src="@drawable/ic_archive"/>

        <Button
            android:id="@+id/lihatbtn"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton1"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/lihat_data"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton2"
            android:src="@drawable/ic_add_box"/>

        <Button
            android:id="@+id/inputbtn"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton2"
            android:text="@string/masukkan_data"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton3"
            android:src="@drawable/ic_info"/>
        <Button
            android:id="@+id/infobtn"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebutton3"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/about"/>
    </LinearLayout>

</LinearLayout>